--- a/src/static/index.html
+++ b/src/static/index.html
@@ -9,8 +9,8 @@
         body { font-family: sans-serif; margin: 20px; }
         .section { margin-bottom: 20px; padding: 15px; border: 1px solid #ccc; border-radius: 5px; }
         h2 { margin-top: 0; }
-        label { display: inline-block; width: 80px; margin-bottom: 5px; }
-        input[type="text"], input[type="email"], input[type="number"] { margin-bottom: 10px; padding: 5px; width: 200px; }
+        label { display: inline-block; width: 120px; margin-bottom: 5px; } /* Adjusted label width */
+        input[type="text"], input[type="email"], input[type="number"], input[type="date"] { margin-bottom: 10px; padding: 5px; width: 200px; }
         button { padding: 8px 15px; margin-right: 10px; cursor: pointer; }
         pre { background-color: #f4f4f4; padding: 10px; border: 1px solid #ddd; border-radius: 4px; white-space: pre-wrap; word-wrap: break-word; }
     </style>
@@ -18,14 +18,12 @@
 <body>
     <h1>User API Test</h1>
 
-    <!-- Get All Users -->
     <div class="section">
         <h2>Get All Users (GET /users)</h2>
         <button onclick="getUsers()">Get Users</button>
         <pre id="get-users-result"></pre>
     </div>
 
-    <!-- Create User -->
     <div class="section">
         <h2>Create User (POST /users)</h2>
         <label for="create-username">Username:</label>
@@ -38,7 +36,6 @@
         <pre id="create-user-result"></pre>
     </div>
 
-    <!-- Get Single User -->
     <div class="section">
         <h2>Get Single User (GET /users/&lt;id&gt;)</h2>
         <label for="get-user-id">User ID:</label>
@@ -47,7 +44,6 @@
         <pre id="get-user-result"></pre>
     </div>
 
-    <!-- Update User -->
     <div class="section">
         <h2>Update User (PUT /users/&lt;id&gt;)</h2>
         <label for="update-user-id">User ID:</label>
@@ -60,13 +56,60 @@
         <pre id="update-user-result"></pre>
     </div>
 
-    <!-- Delete User -->
     <div class="section">
         <h2>Delete User (DELETE /users/&lt;id&gt;)</h2>
         <label for="delete-user-id">User ID:</label>
         <input type="number" id="delete-user-id" name="user_id"><br>
         <button onclick="deleteUser()">Delete User</button>
         <pre id="delete-user-result"></pre>
+    </div>
+
+    <div class="section">
+        <h2>Get User Periods (GET /users/&lt;id&gt;/periods)</h2>
+        <label for="get-user-periods-id">User ID:</label>
+        <input type="number" id="get-user-periods-id" name="user_id"><br>
+        <button onclick="getUserPeriods()">Get Periods</button>
+        <pre id="get-user-periods-result"></pre>
+    </div>
+
+    <div class="section">
+        <h2>Create Period (POST /users/&lt;id&gt;/periods)</h2>
+        <label for="create-period-user-id">User ID:</label>
+        <input type="number" id="create-period-user-id" name="user_id"><br>
+        <label for="create-period-start-date">Start Date:</label>
+        <input type="date" id="create-period-start-date" name="start_date"><br>
+        <label for="create-period-end-date">End Date:</label>
+        <input type="date" id="create-period-end-date" name="end_date"><br>
+        <label for="create-period-flow-intensity">Flow Intensity:</label>
+        <input type="text" id="create-period-flow-intensity" name="flow_intensity" placeholder="light, medium, heavy"><br>
+        <label for="create-period-symptoms">Symptoms:</label>
+        <input type="text" id="create-period-symptoms" name="symptoms"><br>
+        <button onclick="createPeriod()">Create Period</button>
+        <pre id="create-period-result"></pre>
+    </div>
+
+    <div class="section">
+        <h2>Get User Ovulations (GET /users/&lt;id&gt;/ovulations)</h2>
+        <label for="get-user-ovulations-id">User ID:</label>
+        <input type="number" id="get-user-ovulations-id" name="user_id"><br>
+        <button onclick="getUserOvulations()">Get Ovulations</button>
+        <pre id="get-user-ovulations-result"></pre>
+    </div>
+
+    <div class="section">
+        <h2>Create Ovulation (POST /users/&lt;id&gt;/ovulations)</h2>
+        <label for="create-ovulation-user-id">User ID:</label>
+        <input type="number" id="create-ovulation-user-id" name="user_id"><br>
+        <label for="create-ovulation-date">Ovulation Date:</label>
+        <input type="date" id="create-ovulation-date" name="ovulation_date"><br>
+        <label for="create-ovulation-temperature">BBT:</label>
+        <input type="number" step="0.1" id="create-ovulation-temperature" name="basal_body_temperature"><br>
+        <label for="create-ovulation-mucus">Cervical Mucus:</label>
+        <input type="text" id="create-ovulation-mucus" name="cervical_mucus" placeholder="dry, sticky, creamy, watery, egg-white"><br>
+        <label for="create-ovulation-symptoms">Symptoms:</label>
+        <input type="text" id="create-ovulation-symptoms" name="symptoms"><br>
+        <button onclick="createOvulation()">Create Ovulation</button>
+        <pre id="create-ovulation-result"></pre>
     </div>
 
     <script>
@@ -206,6 +249,125 @@
                 displayError(resultElementId, error);
             }
         }
+
+        // GET /users/<id>/periods
+        async function getUserPeriods() {
+            const resultElementId = 'get-user-periods-result';
+            const userId = document.getElementById('get-user-periods-id').value;
+            if (!userId) {
+                displayError(resultElementId, 'User ID cannot be empty');
+                return;
+            }
+            try {
+                const response = await fetch(`${API_BASE_URL}/${userId}/periods`);
+                if (response.status === 404) throw new Error('User not found or no periods for this user');
+                if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+                const data = await response.json();
+                displayResult(resultElementId, data);
+            } catch (error) {
+                displayError(resultElementId, error);
+            }
+        }
+
+        // POST /users/<id>/periods
+        async function createPeriod() {
+            const resultElementId = 'create-period-result';
+            const userId = document.getElementById('create-period-user-id').value;
+            const startDate = document.getElementById('create-period-start-date').value;
+            const endDate = document.getElementById('create-period-end-date').value;
+            const flowIntensity = document.getElementById('create-period-flow-intensity').value;
+            const symptoms = document.getElementById('create-period-symptoms').value;
+
+            if (!userId || !startDate) {
+                displayError(resultElementId, 'User ID and Start Date cannot be empty');
+                return;
+            }
+
+            const periodData = {
+                start_date: startDate,
+                end_date: endDate || null, // Send null if empty
+                flow_intensity: flowIntensity || null,
+                symptoms: symptoms || null
+            };
+
+            try {
+                const response = await fetch(`${API_BASE_URL}/${userId}/periods`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(periodData)
+                });
+                const data = await response.json();
+                if (!response.ok) throw new Error(data.message || `HTTP error! status: ${response.status}`);
+                displayResult(resultElementId, data);
+                // Clear input fields
+                document.getElementById('create-period-start-date').value = '';
+                document.getElementById('create-period-end-date').value = '';
+                document.getElementById('create-period-flow-intensity').value = '';
+                document.getElementById('create-period-symptoms').value = '';
+            } catch (error) {
+                displayError(resultElementId, error);
+            }
+        }
+
+        // GET /users/<id>/ovulations
+        async function getUserOvulations() {
+            const resultElementId = 'get-user-ovulations-result';
+            const userId = document.getElementById('get-user-ovulations-id').value;
+            if (!userId) {
+                displayError(resultElementId, 'User ID cannot be empty');
+                return;
+            }
+            try {
+                const response = await fetch(`${API_BASE_URL}/${userId}/ovulations`);
+                if (response.status === 404) throw new Error('User not found or no ovulations for this user');
+                if (!response.ok) throw new Error(`HTTP error! status: ${response.status}`);
+                const data = await response.json();
+                displayResult(resultElementId, data);
+            } catch (error) {
+                displayError(resultElementId, error);
+            }
+        }
+
+        // POST /users/<id>/ovulations
+        async function createOvulation() {
+            const resultElementId = 'create-ovulation-result';
+            const userId = document.getElementById('create-ovulation-user-id').value;
+            const ovulationDate = document.getElementById('create-ovulation-date').value;
+            const basalBodyTemperature = document.getElementById('create-ovulation-temperature').value;
+            const cervicalMucus = document.getElementById('create-ovulation-mucus').value;
+            const symptoms = document.getElementById('create-ovulation-symptoms').value;
+
+            if (!userId || !ovulationDate) {
+                displayError(resultElementId, 'User ID and Ovulation Date cannot be empty');
+                return;
+            }
+
+            const ovulationData = {
+                ovulation_date: ovulationDate,
+                basal_body_temperature: basalBodyTemperature ? parseFloat(basalBodyTemperature) : null,
+                cervical_mucus: cervicalMucus || null,
+                symptoms: symptoms || null
+            };
+
+            try {
+                const response = await fetch(`${API_BASE_URL}/${userId}/ovulations`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(ovulationData)
+                });
+                const data = await response.json();
+                if (!response.ok) throw new Error(data.message || `HTTP error! status: ${response.status}`);
+                displayResult(resultElementId, data);
+                // Clear input fields
+                document.getElementById('create-ovulation-date').value = '';
+                document.getElementById('create-ovulation-temperature').value = '';
+                document.getElementById('create-ovulation-mucus').value = '';
+                document.getElementById('create-ovulation-symptoms').value = '';
+            } catch (error) {
+                displayError(resultElementId, error);
+            }
+        }
+
     </script>
 </body>
 </html>
